--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,10 @@ jobs:
           bundler-cache: true
       - name: Run linters
         run: |
-          rubocop --parallel
+          bundle exec rubocop --parallel
       - name: Run security checks
         run: |
-          bundler-audit --update
+          bundle exec bundler-audit --update
   tests:
     name: Tests
     runs-on: ubuntu-latest
@@ -44,4 +44,4 @@ jobs:
         run: |
           bin/rails db:setup
       - name: Run tests
-        run: rspec
+        run: bundle exec rspec
