Setup test database

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,12 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: <% POSTGRES_DB =%>
+  pool: 5
+  username: <% POSTGRES_USER =%>
+  password: <% POSTGRES_PASSWORD =%>
 
 production:
   <<: *default
