--- a/config/database.yml
+++ b/config/database.yml
@@ -13,12 +13,10 @@ development:
   <<: *default
   database: db/development.sqlite3
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   adapter: postgresql
   encoding: unicode
+  host: postgres
   database: <%= ENV['POSTGRES_DB'] %>
   pool: 5
   username: <%= ENV['POSTGRES_USER'] %>
