--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,8 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  host: postgres
+  host: <%= ENV['POSTGRES_HOST'] %>
+  port: <%= ENV['POSTGRES_PORT'] %>
   database: <%= ENV['POSTGRES_DB'] %>
   pool: 5
   username: <%= ENV['POSTGRES_USER'] %>
