--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         env:
           POSTGRES_USER: myapp
           POSTGRES_DB: myapp_test
-          POSTGRES_PASSWORD: ""
+          POSTGRES_PASSWORD: myapp_test
         ports:
           - 5432:5432
         options: >-
@@ -49,7 +49,7 @@ jobs:
           POSTGRES_PORT: 5432
           POSTGRES_USER: myapp
           POSTGRES_DB: myapp_test
-          POSTGRES_PASSWORD: ""
+          POSTGRES_PASSWORD: myapp_test
         run: |
           bin/rails db:setup
       - name: Run tests
